deploy/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: kube-certs
#   namespace: demo
# spec:
#   selector:
#     matchLabels:
#       app: kube-certs
#   template:
#     metadata:
#       labels:
#         app: kube-certs
#     spec:
#       terminationGracePeriodSeconds: 5
#       containers:
#         - name: server
#           image: saiyam911/kube-certs:sha-848915f
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 8080
#           env:
#             - name: PORT
#               value: "8080"

apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: parking-dev
  labels:
    app: demo-api
spec:
  selector:
    matchLabels:
      app: demo-api
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      # initContainers:
      # Init containers are exactly like regular containers, except:
      # - Init containers always run to completion.
      # - Each init container must complete successfully before the next one starts.
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: demo-api
          image: ghcr.io/champalab/demo-api:72ec3411ee57b1d30fca0270021fae7431b0a701
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 500m
              memory: 100Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          livenessProbe:
            tcpSocket:
              port: 3377
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3377
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10

          # envFrom:
          # - configMapRef:
          #     name: demo-api-config
          # - secretRef:
          #     name: demo-api-secret

          ports:
            - containerPort: 3377
              name: http
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
            # - name: demo
            #   mountPath: /app/uploads
            #   subPath: demo/uploads
      # hostAliases:
      #   - ip: 10.2.100.197
      #     hostnames:
      #       - mxf.laoevisa.gov.la
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Bangkok
        - name: demo
          nfs:
            # path: /mnt/nfs/share
            # server: 195.35.23.213
            # path: /mnt/share
            # server: 34.87.14.195
      restartPolicy: Always
