deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kubeissuer
    kubernetes.io/ingress.class: nginx
  name: kube-certs-ingress
  namespace: demo
spec:
  rules:
    - host: jussun.com
      http:
        paths:
          - backend:
              service:
                name: kube-certs
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - jussun.com
      secretName: demo
